@@ -40,8 +40,12 @@
 NAVISERVER       = @NAVISERVER@
 srcdir           = @SRCDIR@
 
-RM               = /bin/rm -f
+NS_PATCH_LEVEL   = @NS_PATCH_LEVEL@
+
+@SET_MAKE@
+RM               = /bin/rm -Rf
 MKDIR            = /bin/mkdir -p
+CP               = /bin/cp -a
 
 ifdef NSBUILD
     INSTALL_SH	 = $(srcdir)/install-sh -c
